fixed some layout issue

--- a/app/assets/stylesheets/layouts/admin.scss
+++ b/app/assets/stylesheets/layouts/admin.scss
@@ -6,7 +6,15 @@
   .table > tbody > tr > td {
     vertical-align: middle;
   }
-  
+
+  .table > thead > tr > th {
+    border-bottom: 2px solid $brand-light-primary;
+  }
+
+  .table > tbody > tr > td {
+    border-bottom: 1px solid $brand-light-primary;
+  }
+
   .control-label {
     font-weight: normal;
   }
